--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             padding: 0 1.5rem;
         }
         .level-container.active .level-content {
-            max-height: 2000px; /* Increased to accommodate single column layout */
+            /* UPDATED: Increased max-height to accommodate more content */
+            max-height: 3000px; 
             padding: 1.5rem;
             padding-top: 0.75rem;
         }
